--- a/_site.yml
+++ b/_site.yml
@@ -60,6 +60,8 @@ navbar:
           href: api_notices.html
         - text: Actions
           href: api_actions.html
+        - text: Image Sizing
+          href: api_image-sizing.html
     - text: "Misc"
       menu:
         - text: "Submitting to the jamovi Library"
